--- a/src/JRovnyBlog/ClientApp/src/app/app.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/app.component.html
@@ -24,7 +24,11 @@
   </button>
 </mat-toolbar>
 <mat-card *ngFor="let post of blogPosts" style="margin: 10px">
-  {{ post.postId }}
-  {{ post.title }}
-  {{ post.content }}
+  <mat-card-header>
+    <mat-card-title>{{ post.title }}</mat-card-title>
+    <mat-card-subtitle>{{
+      post.createdDate | date: "longDate"
+    }}</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>{{ post.content }}</mat-card-content>
 </mat-card>
