--- a/src/JRovnyBlog/ClientApp/src/app/app.component.scss
+++ b/src/JRovnyBlog/ClientApp/src/app/app.component.scss
@@ -1,3 +1,10 @@
 .example-spacer {
   flex: 1 1 auto;
 }
+.container {
+  position: absolute;
+  top: 64px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
