Created post summary component

--- a/src/JRovnyBlog/ClientApp/src/app/app.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/app.component.html
@@ -24,22 +24,15 @@
   </button>
 </mat-toolbar>
 <mat-sidenav-container class="container">
-  <mat-sidenav opened mode="side" style="width: 250px"></mat-sidenav>
+  <mat-sidenav opened mode="side" style="width: 300px"></mat-sidenav>
   <mat-sidenav
     opened
     mode="side"
     position="end"
-    style="width: 250px"
+    style="width: 300px"
   ></mat-sidenav>
   <mat-sidenav-content>
-    <mat-card *ngFor="let post of blogPosts$ | async" style="margin: 10px">
-      <mat-card-header>
-        <mat-card-title>{{ post.title }}</mat-card-title>
-        <mat-card-subtitle>{{
-          post.createdDate | date: "longDate"
-        }}</mat-card-subtitle>
-      </mat-card-header>
-      <mat-card-content>{{ post.content }}</mat-card-content>
-    </mat-card></mat-sidenav-content
-  ></mat-sidenav-container
->
+    <div *ngFor="let post of blogPosts$ | async">
+      <app-post-summary [post]="post"></app-post-summary>
+    </div> </mat-sidenav-content
+></mat-sidenav-container>
