--- a/src/JRovnyBlog/ClientApp/src/app/app.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/app.component.html
@@ -1,38 +1,22 @@
 <mat-toolbar color="primary">
-  <button
-    mat-icon-button
-    class="example-icon"
-    aria-label="Example icon-button with menu icon"
-  >
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
     <mat-icon>menu</mat-icon>
   </button>
   <span>{{ title }}</span>
   <span class="example-spacer"></span>
-  <button
-    mat-icon-button
-    class="example-icon"
-    aria-label="Example icon-button with share icon"
-  >
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
     <mat-icon>share</mat-icon>
   </button>
-  <button
-    mat-icon-button
-    class="example-icon"
-    aria-label="Example icon-button with share icon"
-  >
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
     <mat-icon>account_circle</mat-icon>
   </button>
 </mat-toolbar>
 <mat-sidenav-container class="container">
   <mat-sidenav opened mode="side" style="width: 300px"></mat-sidenav>
-  <mat-sidenav
-    opened
-    mode="side"
-    position="end"
-    style="width: 300px"
-  ></mat-sidenav>
+  <mat-sidenav opened mode="side" position="end" style="width: 300px"></mat-sidenav>
   <mat-sidenav-content>
     <div *ngFor="let post of blogPosts$ | async">
       <app-post-summary [post]="post"></app-post-summary>
-    </div> </mat-sidenav-content
-></mat-sidenav-container>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
