--- a/src/JRovnyBlog/ClientApp/src/app/app.component.scss
+++ b/src/JRovnyBlog/ClientApp/src/app/app.component.scss
@@ -8,3 +8,22 @@
   left: 0;
   right: 0;
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
