--- a/src/JRovnyBlog/ClientApp/src/app/app.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/app.component.html
@@ -1,13 +1,13 @@
 <mat-toolbar color="primary">
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-    <mat-icon>menu</mat-icon>
-  </button>
-  <span>{{ title }}</span>
+  <button mat-button style="font-size: 25px;">{{ title }}</button>
   <span class="example-spacer"></span>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+  <button mat-icon-button class="example-icon" aria-label="share">
     <mat-icon>share</mat-icon>
   </button>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+  <button mat-icon-button class="example-icon" aria-label="notifications">
+    <mat-icon>notifications</mat-icon>
+  </button>
+  <button mat-icon-button class="example-icon" aria-label="account">
     <mat-icon>account_circle</mat-icon>
   </button>
 </mat-toolbar>
