--- a/src/JRovnyBlog/ClientApp/src/app/components/post-summary/post-summary.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/components/post-summary/post-summary.component.html
@@ -12,11 +12,11 @@
     <div fxLayout="row" fxLayoutGap="10px">
       <div fxLayout="row">
         <mat-icon color="primary" style="margin-right: 3px;">thumb_up_alt</mat-icon>
-        <div class="mat-body">{{post.likes}}</div>
+        <div class="mat-body">{{post.likes}} likes</div>
       </div>
       <div fxLayout="row">
         <mat-icon color="primary" style="margin-right: 3px;">chat_bubble</mat-icon>
-        <div class="mat-body">{{post.comments}}</div>
+        <div class="mat-body">{{post.comments}} comments</div>
       </div>
     </div>
   </mat-card-footer>
