--- a/src/JRovnyBlog/ClientApp/src/app/components/post-summary/post-summary.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/components/post-summary/post-summary.component.html
@@ -12,7 +12,7 @@
     <div fxLayout="row" fxLayoutGap="10px">
       <div fxLayout="row">
         <mat-icon color="primary" style="margin-right: 3px;">thumb_up_alt</mat-icon>
-        <div class="mat-body">{{post.likesCount}} likes</div>
+        <div class="mat-body">{{post.upvoteCount}} likes</div>
       </div>
       <div fxLayout="row">
         <mat-icon color="primary" style="margin-right: 3px;">chat_bubble</mat-icon>
