Tweak toolbar formatting

--- a/src/JRovnyBlog/ClientApp/src/app/app.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar class="mat-elevation-z3 example-header" style="z-index: 2;">
   <button mat-button style="font-size: 25px;">{{ title }}</button>
   <span class="example-spacer"></span>
   <button mat-icon-button class="example-icon" aria-label="share">
