--- a/src/JRovnyBlog/ClientApp/src/app/app.component.scss
+++ b/src/JRovnyBlog/ClientApp/src/app/app.component.scss
@@ -9,6 +9,13 @@
   right: 0;
 }
 
+.example-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
 ::-webkit-scrollbar {
   width: 5px;
 }
