--- a/src/JRovnyBlog/ClientApp/src/app/app.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/app.component.html
@@ -12,8 +12,8 @@
   </button>
 </mat-toolbar>
 <mat-sidenav-container class="container">
-  <mat-sidenav opened mode="side" style="width: 300px"></mat-sidenav>
-  <mat-sidenav opened mode="side" position="end" style="width: 300px"></mat-sidenav>
+  <mat-sidenav [opened]="leftSidenavOpened" mode="side" style="width: 300px"></mat-sidenav>
+  <mat-sidenav [opened]="rightSidenavOpened" mode="side" position="end" style="width: 300px"></mat-sidenav>
   <mat-sidenav-content>
     <div *ngFor="let post of blogPosts$ | async">
       <app-post-summary [post]="post"></app-post-summary>
