--- a/src/JRovnyBlog/ClientApp/src/app/components/post-summary/post-summary.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/components/post-summary/post-summary.component.html
@@ -7,7 +7,7 @@
       post.createdDate | date: "longDate"
     }}</mat-card-subtitle>
   </mat-card-header>
-  <mat-card-content>{{ post.content }}</mat-card-content>
+  <!-- <mat-card-content>{{ post.content }}</mat-card-content> -->
   <mat-card-footer style="padding-left: 15px; padding-bottom: 5px;">
     <div fxLayout="row" fxLayoutGap="10px">
       <div fxLayout="row">
