--- a/src/JRovnyBlog/ClientApp/src/app/app.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/app.component.html
@@ -1,13 +1,12 @@
 <mat-toolbar class="mat-elevation-z3 example-header" style="z-index: 2;">
-  <div fxLayout="row" fxLayoutAlign="space-between" style="width: 100%;">
+  <div fxLayout="row" fxLayoutAlign="space-between center" style="width: 100%;">
     <div>
       <button mat-button style="font-size: 25px;">{{ title }}</button>
-      <button mat-icon-button class="example-icon" aria-label="share">
-        <mat-icon>share</mat-icon>
-      </button>
+      <button mat-button>About</button>
+      <button mat-button>Contact</button>
     </div>
     <div fxLayoutGap="10px">
-      <button mat-button color="primary">Sign In</button>
+      <button mat-button>Sign In</button>
       <button mat-raised-button color="primary">Sign Up</button>
     </div>
   </div>
