Add sizing functions with same dimensions as bootstrap and add hamburger menu

--- a/src/JRovnyBlog/ClientApp/src/app/app.component.scss
+++ b/src/JRovnyBlog/ClientApp/src/app/app.component.scss
@@ -2,11 +2,12 @@
   flex: 1 1 auto;
 }
 .container {
-  position: absolute;
+  position: fixed;
   top: 64px;
   bottom: 0;
   left: 0;
   right: 0;
+  overflow-y: scroll;
 }
 
 .example-header {
