--- a/src/JRovnyBlog/ClientApp/src/app/app.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/app.component.html
@@ -1,13 +1,20 @@
 <mat-toolbar class="mat-elevation-z3 example-header" style="z-index: 2;">
   <div fxLayout="row" fxLayoutAlign="space-between center" style="width: 100%;">
-    <div>
+    <div fxLayout="row">
       <button mat-button style="font-size: 25px;">{{ title }}</button>
-      <button mat-button>About</button>
-      <button mat-button>Contact</button>
+      <div *ngIf="mdScreen()">
+        <button mat-button>About</button>
+        <button mat-button>Contact</button>
+      </div>
     </div>
-    <div fxLayoutGap="10px">
+    <div fxLayoutGap="10px" *ngIf="smScreen()">
       <button mat-button>Sign In</button>
       <button mat-raised-button color="primary">Sign Up</button>
+    </div>
+    <div *ngIf="xsScreen()">
+      <button mat-icon-button color="primary" [matMenuTriggerFor]="menu">
+        <mat-icon>menu</mat-icon>
+      </button>
     </div>
   </div>
   <!-- <span class="example-spacer"></span> -->
@@ -19,11 +26,15 @@
   </button> -->
 </mat-toolbar>
 <div fxLayout="row" class="container">
-  <div style="width: 300px;" *ngIf="leftSidenavOpened"></div>
+  <div style="width: 300px;" *ngIf="lgScreen()"></div>
   <div fxFlex>
     <div *ngFor="let post of blogPosts$ | async">
       <app-post-summary [post]="post"></app-post-summary>
     </div>
   </div>
-  <div style="width: 300px;" *ngIf="rightSidenavOpened"></div>
+  <div style="width: 300px;" *ngIf="mdScreen()"></div>
 </div>
+<mat-menu #menu="matMenu" fxFlex="column">
+  <button mat-menu-item>About</button>
+  <button mat-menu-item>Contact</button>
+</mat-menu>
