Add loading spinner

--- a/src/JRovnyBlog/ClientApp/src/app/app.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/app.component.html
@@ -28,8 +28,10 @@
 <div fxLayout="row" class="container">
   <div style="width: 300px;" *ngIf="lgScreen()"></div>
   <div fxFlex>
-    <div *ngFor="let post of blogPosts$ | async">
-      <app-post-summary [post]="post"></app-post-summary>
+    <div *ngIf="blogPosts$ | async as posts; else loading">
+      <div *ngFor="let post of posts">
+        <app-post-summary [post]="post"></app-post-summary>
+      </div>
     </div>
   </div>
   <div style="width: 300px;" *ngIf="mdScreen()"></div>
@@ -38,3 +40,8 @@
   <button mat-menu-item>About</button>
   <button mat-menu-item>Contact</button>
 </mat-menu>
+<ng-template #loading>
+  <div class="loading-indicator">
+    <mat-spinner></mat-spinner>
+  </div>
+</ng-template>
