--- a/src/JRovnyBlog/ClientApp/src/app/components/post-detail/post-detail.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/components/post-detail/post-detail.component.html
@@ -1,11 +1,18 @@
-<mat-card style="margin: 10px 10px">
-    <mat-card-header>
-
-    </mat-card-header>
-    <mat-card-subtitle>
-
-    </mat-card-subtitle>
-    <mat-card-content>
-
-    </mat-card-content>
-</mat-card>
+<div *ngIf="post$ | async as post; else loading">
+    <mat-card style="margin: 10px 10px">
+        <mat-card-header>
+            {{post.title}}
+        </mat-card-header>
+        <mat-card-subtitle>
+            {{post.createdDate | date: "longDate"}}
+        </mat-card-subtitle>
+        <mat-card-content>
+            {{post.content}}
+        </mat-card-content>
+    </mat-card>
+</div>
+<ng-template #loading>
+    <div class="loading-indicator">
+        <mat-spinner></mat-spinner>
+    </div>
+</ng-template>
