--- a/src/JRovnyBlog/ClientApp/src/app/components/post-detail/post-detail.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/components/post-detail/post-detail.component.html
@@ -1,14 +1,26 @@
-<div *ngIf="post$ | async as post; else loading">
+<div *ngIf="post$ | async as post; else loading" fxFlex>
     <mat-card style="margin: 10px 10px">
-        <mat-card-header>
+        <mat-card-title>
             {{post.title}}
-        </mat-card-header>
+        </mat-card-title>
         <mat-card-subtitle>
             {{post.createdDate | date: "longDate"}}
         </mat-card-subtitle>
         <mat-card-content>
             {{post.content}}
         </mat-card-content>
+        <mat-card-footer style="padding-left: 15px; padding-bottom: 5px;">
+            <div fxLayout="row" fxLayoutGap="10px">
+                <div fxLayout="row">
+                    <mat-icon color="primary" style="margin-right: 3px;">thumb_up_alt</mat-icon>
+                    <div class="mat-body">{{post.upvoteCount}} likes</div>
+                </div>
+                <div fxLayout="row">
+                    <mat-icon color="primary" style="margin-right: 3px;">chat_bubble</mat-icon>
+                    <div class="mat-body">{{post.commentCount}} comments</div>
+                </div>
+            </div>
+        </mat-card-footer>
     </mat-card>
 </div>
 <ng-template #loading>
