Fix URL for routerLink

--- a/src/JRovnyBlog/ClientApp/src/app/components/post-summary/post-summary.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/components/post-summary/post-summary.component.html
@@ -1,6 +1,6 @@
 <mat-card style="margin: 10px 10px">
   <mat-card-header>
-    <mat-card-title><a [routerLink]="['/posts', post.slug]" style="text-decoration: none; color: black">{{
+    <mat-card-title><a [routerLink]="['/posts/', post.slug]" style="text-decoration: none; color: black">{{
         post.title
       }}</a></mat-card-title>
     <mat-card-subtitle>{{
