--- a/src/JRovnyBlog/ClientApp/src/app/components/post-detail/post-detail.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/components/post-detail/post-detail.component.html
@@ -7,7 +7,7 @@
             {{post.createdDate | date: "longDate"}}
         </mat-card-subtitle>
         <mat-card-content>
-            {{post.content}}
+            <div [innerHTML]="post.content"></div>
         </mat-card-content>
         <mat-card-footer style="padding-left: 15px; padding-bottom: 5px;">
             <div fxLayout="row" fxLayoutGap="10px">
