Center align page not found text

--- a/src/JRovnyBlog/ClientApp/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/components/page-not-found/page-not-found.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="column" fxLayoutAlign="center center" style="margin-top: 100px;">
-    <div class="mat-display-3" style="margin-bottom: 25px;">Page Not Found</div>
+    <div class="mat-display-3" style="margin-bottom: 25px; text-align: center;">Page Not Found</div>
     <p>Hmm. We couldn't find what you were looking for.</p>
     <button mat-raised-button color="primary">Return</button>
 </div>
