--- a/src/JRovnyBlog/ClientApp/src/app/components/post-detail/post-detail.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/components/post-detail/post-detail.component.html
@@ -25,6 +25,6 @@
 </div>
 <ng-template #loading>
     <div class="loading-indicator">
-        <mat-spinner></mat-spinner>
+        <mat-spinner diameter="50"></mat-spinner>
     </div>
 </ng-template>
