--- a/src/JRovnyBlog/ClientApp/src/app/components/post-list/post-list.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/components/post-list/post-list.component.html
@@ -5,6 +5,6 @@
 </div>
 <ng-template #loading>
     <div class="loading-indicator">
-        <mat-spinner></mat-spinner>
+        <mat-spinner diameter="50"></mat-spinner>
     </div>
 </ng-template>
