Add image to post cards

--- a/src/JRovnyBlog/ClientApp/src/app/components/post-detail/post-detail.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/components/post-detail/post-detail.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="post$ | async as post; else loading" fxFlex>
     <mat-card style="margin: 10px 10px">
+        <img mat-card-image [src]="post.image" alt="Blog post image">
         <mat-card-title>
             {{post.title}}
         </mat-card-title>
