--- a/src/JRovnyBlog/ClientApp/src/app/components/post-list/post-list.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/components/post-list/post-list.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="blogPosts$ | async as posts; else loading">
-    <div *ngFor="let post of posts" fxLayoutAlign="center">
+    <div *ngFor="let post of posts">
         <app-post-summary [post]="post"></app-post-summary>
     </div>
 </div>
