Remove unused code

--- a/src/JRovnyBlog/ClientApp/src/app/components/post-summary/post-summary.component.scss
+++ b/src/JRovnyBlog/ClientApp/src/app/components/post-summary/post-summary.component.scss
@@ -1,4 +1,4 @@
-.mat-card-md-image {
-    width: 200px;
-    margin-left: 10px;
-}
+// .mat-card-md-image {
+//     width: 200px;
+//     margin-left: 10px;
+// }
