--- a/src/JRovnyBlog/ClientApp/src/app/components/post-detail/post-detail.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/components/post-detail/post-detail.component.html
@@ -1,25 +1,65 @@
 <div *ngIf="post$ | async as post; else loading" fxFlex>
-    <mat-card style="margin: 10px 10px">
+    <mat-card style="margin: 10px 10px;">
         <img mat-card-image [src]="post.image" alt="Blog post image">
-        <mat-card-title>
-            {{post.title}}
-        </mat-card-title>
-        <mat-card-subtitle>
-            {{post.createdDate | date: "longDate"}}
-        </mat-card-subtitle>
+        <div fxLayout="row">
+            <div fxFlex>
+                <mat-card-title>
+                    <div fxLayout="row">
+                        {{post.title}}
+                    </div>
+                </mat-card-title>
+                <mat-card-subtitle>
+                    {{post.createdDate | date: "longDate"}}
+                </mat-card-subtitle>
+            </div>
+            <div *ngIf="xsScreen(); else smScreen">
+                <button mat-icon-button>
+                    <mat-icon>share</mat-icon>
+                </button>
+            </div>
+            <ng-template #smScreen>
+                <button mat-icon-button matTooltip="Share with Facebook">
+                    <fa-icon [icon]="facebookF" size="lg" style="color: rgb(66,103,178);"></fa-icon>
+                </button>
+                <button mat-icon-button matTooltip="Share with Twitter">
+                    <fa-icon [icon]="faTwitter" size="lg" style="color: rgb(29,161,242);"></fa-icon>
+                </button>
+            </ng-template>
+        </div>
         <mat-card-content>
             <div [innerHTML]="post.content"></div>
         </mat-card-content>
-        <mat-card-footer style="padding-left: 15px; padding-bottom: 5px;">
-            <div fxLayout="row" fxLayoutGap="10px">
-                <div fxLayout="row">
-                    <mat-icon color="primary" style="margin-right: 3px;">thumb_up_alt</mat-icon>
-                    <div class="mat-body">{{post.upvoteCount}} likes</div>
+        <mat-card-footer style="padding-left: 15px; padding-right: 15px; padding-bottom: 5px;">
+            <div fxLayout="column" fxLayoutGap="10px">
+                <mat-divider inset="true" *ngIf="post.tags.length > 0"></mat-divider>
+                <!-- Tags -->
+                <div *ngIf="post.tags.length > 0">
+                    <mat-chip-list aria-label="Tags">
+                        <mat-chip *ngFor="let tag of post.tags">{{tag.name}}</mat-chip>
+                    </mat-chip-list>
                 </div>
-                <div fxLayout="row">
-                    <mat-icon color="primary" style="margin-right: 3px;">chat_bubble</mat-icon>
-                    <div class="mat-body">{{post.commentCount}} comments</div>
-                </div>
+                <mat-divider inset="true" *ngIf="post.tags.length > 0"></mat-divider>
+                <!-- Comments -->
+                <mat-card>
+                    <mat-card-title>
+                        Leave a comment...
+                    </mat-card-title>
+                    <mat-card-content fxLayout="column">
+                        <mat-form-field>
+                            <textarea matInput placeholder="Comment" required></textarea>
+                        </mat-form-field>
+                        <mat-form-field hintLabel="Email is never shared">
+                            <input matInput placeholder="Email" required>
+                        </mat-form-field>
+                        <mat-form-field>
+                            <input matInput placeholder="Name" required>
+                        </mat-form-field>
+                        <mat-form-field>
+                            <input matInput placeholder="Website">
+                        </mat-form-field>
+                        <button mat-raised-button color="primary" fxFlexAlign="start" disabled>Publish</button>
+                    </mat-card-content>
+                </mat-card>
             </div>
         </mat-card-footer>
     </mat-card>
