--- a/src/JRovnyBlog/ClientApp/src/app/components/comment-initial-add/comment-initial-add.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/components/comment-initial-add/comment-initial-add.component.html
@@ -1,18 +1,26 @@
-<form fxLayout="column" [formGroup]="form" (ngSubmit)="onSubmit()" #formDirective="ngForm">
-    <mat-form-field>
-        <textarea matInput placeholder="Comment" formControlName="content" required></textarea>
-    </mat-form-field>
-    <mat-form-field hintLabel="Email is never shared">
-        <input matInput placeholder="Email" formControlName="email" required type="email">
-    </mat-form-field>
-    <mat-form-field>
-        <input matInput placeholder="Name" formControlName="name" required>
-    </mat-form-field>
-    <mat-form-field>
-        <input matInput placeholder="Website" formControlName="website">
-    </mat-form-field>
-    <mat-checkbox fxFlexAlign="start" style="margin-bottom: 5px;" formControlName="rememberMe">
-        Remember me
-    </mat-checkbox>
-    <button type="submit" mat-raised-button color="primary" fxFlexAlign="start" [disabled]=!form.valid>Publish</button>
-</form>
+<mat-card>
+    <mat-card-title>
+        Leave a comment...
+    </mat-card-title>
+    <mat-card-content>
+        <form fxLayout="column" [formGroup]="form" (ngSubmit)="onSubmit()" #formDirective="ngForm">
+            <mat-form-field>
+                <textarea matInput placeholder="Comment" formControlName="content" required></textarea>
+            </mat-form-field>
+            <mat-form-field hintLabel="Email is never shared">
+                <input matInput placeholder="Email" formControlName="email" required type="email">
+            </mat-form-field>
+            <mat-form-field>
+                <input matInput placeholder="Name" formControlName="name" required>
+            </mat-form-field>
+            <mat-form-field>
+                <input matInput placeholder="Website" formControlName="website">
+            </mat-form-field>
+            <mat-checkbox fxFlexAlign="start" style="margin-bottom: 5px;" formControlName="rememberMe">
+                Remember me
+            </mat-checkbox>
+            <button type="submit" mat-raised-button color="primary" fxFlexAlign="start"
+                [disabled]=!form.valid>Publish</button>
+        </form>
+    </mat-card-content>
+</mat-card>
