--- a/src/JRovnyBlog/ClientApp/src/app/components/post-list/post-list.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/components/post-list/post-list.component.html
@@ -1,10 +1,10 @@
-<div *ngIf="blogPosts$ | async as posts; else loading">
+<div *ngIf="blogPosts$ | async as posts">
     <div *ngFor="let post of posts">
         <app-post-summary [post]="post"></app-post-summary>
     </div>
 </div>
-<ng-template #loading>
+<div *ngIf="loading$ | async">
     <div class="loading-indicator">
         <mat-spinner diameter="50"></mat-spinner>
     </div>
-</ng-template>
+</div>
