--- a/src/JRovnyBlog/ClientApp/src/app/components/comment-list/comment-list.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/components/comment-list/comment-list.component.html
@@ -1,26 +1,45 @@
-<mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree" #tree>
-    <!-- This is the tree node template for leaf nodes -->
-    <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle isExpanded="true">
-        <li class="mat-tree-node">
-            <!-- use a disabled button to provide padding for tree leaf -->
-            <button mat-icon-button disabled></button>
-            <app-comment-detail [comment]="node"></app-comment-detail>
-        </li>
-    </mat-tree-node>
-    <!-- This is the tree node template for expandable nodes -->
-    <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild" isExpanded="true">
-        <li>
-            <div class="mat-tree-node">
-                <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'Toggle ' + node.userName">
-                    <mat-icon class="mat-icon-rtl-mirror">
-                        {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
-                    </mat-icon>
-                </button>
-                <app-comment-detail [comment]="node"></app-comment-detail>
-            </div>
-            <ul [class.example-tree-invisible]="!treeControl.isExpanded(node)">
-                <ng-container matTreeNodeOutlet></ng-container>
-            </ul>
-        </li>
-    </mat-nested-tree-node>
+<h2>{{ comments.length }} Comments</h2>
+<mat-tree
+  [dataSource]="dataSource"
+  [treeControl]="treeControl"
+  class="example-tree"
+  #tree
+>
+  <!-- This is the tree node template for leaf nodes -->
+  <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle isExpanded="true">
+    <li class="mat-tree-node">
+      <!-- use a disabled button to provide padding for tree leaf -->
+      <button mat-icon-button disabled></button>
+      <app-comment-detail
+        [comment]="node"
+        style="width: 100%"
+      ></app-comment-detail>
+    </li>
+  </mat-tree-node>
+  <!-- This is the tree node template for expandable nodes -->
+  <mat-nested-tree-node
+    *matTreeNodeDef="let node; when: hasChild"
+    isExpanded="true"
+  >
+    <li>
+      <div class="mat-tree-node">
+        <button
+          mat-icon-button
+          matTreeNodeToggle
+          [attr.aria-label]="'Toggle ' + node.userName"
+        >
+          <mat-icon class="mat-icon-rtl-mirror">
+            {{ treeControl.isExpanded(node) ? "expand_more" : "chevron_right" }}
+          </mat-icon>
+        </button>
+        <app-comment-detail
+          [comment]="node"
+          style="width: 100%"
+        ></app-comment-detail>
+      </div>
+      <ul [class.example-tree-invisible]="!treeControl.isExpanded(node)">
+        <ng-container matTreeNodeOutlet></ng-container>
+      </ul>
+    </li>
+  </mat-nested-tree-node>
 </mat-tree>
