--- a/src/JRovnyBlog/ClientApp/src/app/components/comment-list/comment-list.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/components/comment-list/comment-list.component.html
@@ -9,7 +9,7 @@
   <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle isExpanded="true">
     <li class="mat-tree-node">
       <!-- use a disabled button to provide padding for tree leaf -->
-      <button mat-icon-button disabled></button>
+      <!-- <button mat-icon-button disabled></button> -->
       <app-comment-detail
         [comment]="node"
         style="width: 100%"
@@ -17,13 +17,10 @@
     </li>
   </mat-tree-node>
   <!-- This is the tree node template for expandable nodes -->
-  <mat-nested-tree-node
-    *matTreeNodeDef="let node; when: hasChild"
-    isExpanded="true"
-  >
+  <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
     <li>
       <div class="mat-tree-node">
-        <button
+        <!-- <button
           mat-icon-button
           matTreeNodeToggle
           [attr.aria-label]="'Toggle ' + node.userName"
@@ -31,7 +28,7 @@
           <mat-icon class="mat-icon-rtl-mirror">
             {{ treeControl.isExpanded(node) ? "expand_more" : "chevron_right" }}
           </mat-icon>
-        </button>
+        </button> -->
         <app-comment-detail
           [comment]="node"
           style="width: 100%"
