Add reply button to comment detail component

--- a/src/JRovnyBlog/ClientApp/src/app/components/comment-detail/comment-detail.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/components/comment-detail/comment-detail.component.html
@@ -20,6 +20,12 @@
       <button mat-icon-button>
         <mat-icon inline="true">expand_more</mat-icon>
       </button>
+      <button
+        mat-button
+        style="font-weight: normal; height: 32px; line-height: 32px"
+      >
+        Reply
+      </button>
     </div>
   </div>
 </div>
