--- a/src/JRovnyBlog/ClientApp/src/app/components/comment-detail/comment-detail.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/components/comment-detail/comment-detail.component.html
@@ -5,11 +5,18 @@
   class="comment-area"
   [style.margin-bottom]="isRootNode() === true ? '10px' : '3px'"
 >
-  <!-- <mat-icon style="width: 36px; height: 36px; font-size: 36px"
-    >account_circle</mat-icon> -->
   <div fxLayout="column">
-    <div style="font-size: large">{{ comment.userName }}</div>
-    <div style="font-size: smaller">{{ getElapsedTime() }}</div>
+    <div fxLayout="row" fxLayoutGap="5px">
+      <img
+        src="https://s.gravatar.com/avatar/{{ comment.emailHash }}?s=36"
+        alt="User Avatar"
+        style="border-radius: 50%; height: 36px; width: 36px"
+      />
+      <div>
+        <div style="font-size: large">{{ comment.userName }}</div>
+        <div style="font-size: smaller">{{ getElapsedTime() }}</div>
+      </div>
+    </div>
     <div style="font-size: small; margin-top: 3px; margin-bottom: 3px">
       {{ comment.content }}
     </div>
