--- a/src/JRovnyBlog/ClientApp/src/app/components/comment-detail/comment-detail.component.html
+++ b/src/JRovnyBlog/ClientApp/src/app/components/comment-detail/comment-detail.component.html
@@ -13,7 +13,7 @@
         style="border-radius: 50%; height: 36px; width: 36px"
       />
       <div>
-        <div style="font-size: large">{{ comment.userName }}</div>
+        <div style="font-size: medium">{{ comment.userName }}</div>
         <div style="font-size: smaller">{{ getElapsedTime() }}</div>
       </div>
     </div>
